@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: analysis.c,v 1.9 2000/11/29 16:36:34 gtw Exp $
+ * $Id: analysis.c,v 1.10 2001/03/14 22:34:32 gtw Exp $
  */
 
 #include "config.h"
@@ -303,6 +303,7 @@ AnalyzeGame ( list *plGame, int iGame ) {
       case MOVE_SETCUBEVAL:
       case MOVE_SETCUBEPOS:
 	  /* FIXME apply these records */
+	  ;
       }
 
       if( !i && pmr->mt == MOVE_NORMAL && pmr->n.fPlayer ) i++;
